--- a/packages/spindle-ui/src/Breadcrumb/Breadcrumb.css
+++ b/packages/spindle-ui/src/Breadcrumb/Breadcrumb.css
@@ -3,34 +3,53 @@
 */
 .spui-Breadcrumb {
   overflow: scroll hidden;
+}
+
+.spui-Breadcrumb--standard {
+  padding: 12px 0;
+  position: relative;
+}
+
+/* Display inner border */
+.spui-Breadcrumb--standard::before {
+  background: var(--color-border-low-emphasis);
+  bottom: 0;
+  content: '';
+  height: 1px;
+  position: absolute;
+  width: 100%;
+}
+
+.spui-Breadcrumb--emphasized .spui-Breadcrumb-list {
   background: var(--color-surface-secondary);
   border-radius: 70px;
-  display: inline-block;
-  overflow: scroll hidden;
-  padding: 0 16px;
 }
 
 .spui-Breadcrumb-list {
-  align-items: center;
   display: flex;
   list-style: none;
   margin: 0;
-  padding: 0;
+  padding: 0 16px;
+  width: max-content;
 }
 
 .spui-Breadcrumb-item {
   align-items: center;
   display: flex;
-  min-height: 56px;
 }
 
 /* stylelint-disable plugin/selector-bem-pattern */
+.spui-Breadcrumb--emphasized .spui-Breadcrumb-item,
+.spui-Breadcrumb--emphasized a::before {
+  min-height: 44px;
+}
+
 .spui-Breadcrumb a {
   align-items: center;
   border-radius: 4px;
   display: flex;
-  letter-spacing: 0.1em;
-  line-height: 1.3;
+  font-size: 0.875em;
+  line-height: 1.4;
   padding: 4px 8px;
   position: relative;
   text-decoration: none;
@@ -50,7 +69,6 @@
   border-radius: 4px;
   content: '';
   left: 0;
-  min-height: 56px;
   position: absolute;
   top: -50%;
   width: 100%;
@@ -83,22 +101,19 @@
 }
 
 @media screen and (max-width: 768px) {
-  .spui-Breadcrumb {
+  .spui-Breadcrumb-list {
     padding: 0 14px;
   }
 
-  .spui-Breadcrumb-item {
-    min-height: 40px;
+  /* stylelint-disable plugin/selector-bem-pattern */
+  .spui-Breadcrumb--emphasized .spui-Breadcrumb-item,
+  .spui-Breadcrumb--emphasized a::before {
+    min-height: 36px;
   }
 
-  /* stylelint-disable plugin/selector-bem-pattern */
   .spui-Breadcrumb a {
     font-size: 0.8125em;
     padding: 2px 6px;
-  }
-
-  .spui-Breadcrumb a:not([aria-current])::before {
-    min-height: 40px;
   }
   /* stylelint-enable plugin/selector-bem-pattern */
 
