--- a/packages/spindle-ui/src/TextButton/TextButton.css
+++ b/packages/spindle-ui/src/TextButton/TextButton.css
@@ -21,6 +21,7 @@
   font-family: inherit;
   font-size: 1em;
   font-weight: var(--TextButton-fontWeight);
+  line-height: 1.3;
   margin: 0;
   padding: 0;
   -webkit-tap-highlight-color: var(--TextButton-tapHighlightColor);
