--- a/packages/spindle-ui/src/TextLink/TextLink.css
+++ b/packages/spindle-ui/src/TextLink/TextLink.css
@@ -18,6 +18,7 @@
   color: var(--TextLink-color);
   font-family: inherit;
   font-weight: var(--TextLink-fontWeight);
+  line-height: 1.3;
   -webkit-tap-highlight-color: var(--TextLink-tapHighlightColor);
 }
 
