feat(spindle-ui): add Button with iconPosition

--- a/packages/spindle-ui/src/Button/Button.css
+++ b/packages/spindle-ui/src/Button/Button.css
@@ -215,17 +215,36 @@
   line-height: 0; /* Fix Icon position align */
 }
 
-.spui-Button-icon--large {
+.spui-Button--iconstart .spui-Button-icon--large {
   font-size: 1.375em; /* Icon 22px / Text 16px = 1.375 */
   margin-right: 6px;
 }
 
-.spui-Button-icon--medium {
+.spui-Button--iconstart .spui-Button-icon--medium {
   font-size: 1.429em; /* Icon 20px / Text 14px =  1.42857142857 */
   margin-right: 4px;
 }
 
-.spui-Button-icon--small {
+.spui-Button--iconstart .spui-Button-icon--small {
   font-size: 1.23em; /* Icon 16px / Text 13px = 1.23076923077 */
   margin-right: 2px;
+}
+
+.spui-Button--iconend {
+  flex-direction: row-reverse;
+}
+
+.spui-Button--iconend .spui-Button-icon--large {
+  font-size: 1.125em; /* Icon 18px / Text 16px = 1.125 */
+  margin-left: 6px;
+}
+
+.spui-Button--iconend .spui-Button-icon--medium {
+  font-size: 1.143em; /* Icon 16px / Text 14px =  1.14285714285 */
+  margin-left: 4px;
+}
+
+.spui-Button--iconend .spui-Button-icon--small {
+  font-size: 1.077em; /* Icon 14px / Text 13px = 1.07692307692 */
+  margin-left: 2px;
 }
