--- a/packages/spindle-ui/src/DropdownMenu/DropdownMenu.css
+++ b/packages/spindle-ui/src/DropdownMenu/DropdownMenu.css
@@ -16,7 +16,7 @@
   animation: 0.3s spui-DropdownMenu-fade-in;
   background-color: var(--color-surface-primary);
   border-radius: 12px;
-  box-shadow: 0px 11px 28px rgba(8, 18, 26, 0.12);
+  box-shadow: 0 11px 28px rgba(8, 18, 26, 0.12);
   box-sizing: border-box;
   list-style: none;
   margin: 0;
@@ -153,6 +153,7 @@
   from {
     opacity: 0;
   }
+
   to {
     opacity: 1;
   }
@@ -162,6 +163,7 @@
   from {
     opacity: 1;
   }
+
   to {
     opacity: 0;
   }
