--- a/packages/spindle-ui/src/Form/Checkbox.css
+++ b/packages/spindle-ui/src/Form/Checkbox.css
@@ -64,12 +64,9 @@
 /* To add 2px space for outline */
 .spui-Checkbox-outline {
   border-radius: 2px;
-  bottom: -2px;
   height: 22px;
-  left: -2px;
+  inset: -2px;
   position: absolute;
-  right: -2px;
-  top: -2px;
   width: 22px;
 }
 
