--- a/packages/spindle-ui/src/Form/Radio.css
+++ b/packages/spindle-ui/src/Form/Radio.css
@@ -64,12 +64,9 @@
 /* To add 2px space for outline */
 .spui-Radio-outline {
   border-radius: 50%;
-  bottom: -2px;
   height: 24px;
-  left: -2px;
+  inset: -2px;
   position: absolute;
-  right: -2px;
-  top: -2px;
   width: 24px;
 }
 
