--- a/packages/spindle-ui/src/Form/ToggleSwitch.css
+++ b/packages/spindle-ui/src/Form/ToggleSwitch.css
@@ -64,11 +64,8 @@
 /* To add 2px space for outline */
 .spui-ToggleSwitch-outline {
   border-radius: 16px;
-  bottom: -2px;
-  left: -2px;
+  inset: -2px;
   position: absolute;
-  right: -2px;
-  top: -2px;
 }
 
 /* box-shadow is used to apply border-radius as outline */
