--- a/packages/spindle-ui/src/SnackBar/SnackBar.css
+++ b/packages/spindle-ui/src/SnackBar/SnackBar.css
@@ -22,7 +22,7 @@
 .spui-SnackBar-content {
   align-items: center;
   border-radius: 16px;
-  box-shadow: 0px 11px 28px rgba(8, 18, 26, 0.24);
+  box-shadow: 0 11px 28px rgba(8, 18, 26, 0.24);
   box-sizing: border-box;
   display: inline-grid;
   grid-template: 'Icon Text Button IconButton' auto / auto 1fr auto auto;
@@ -117,6 +117,7 @@
 .spui-SnackBar-iconButton {
   /* stylelint-disable-next-line plugin/selector-bem-pattern */
   --IconButton--neutral-backgroundColor: transparent;
+
   grid-area: IconButton;
   margin-left: 12px;
 }
