--- a/packages/spindle-ui/src/Pagination/PaginationItem.css
+++ b/packages/spindle-ui/src/Pagination/PaginationItem.css
@@ -22,18 +22,24 @@
   text-decoration: none;
 }
 
-.spui-PaginationItem-link--prev[aria-hidden],
-.spui-PaginationItem-link--next[aria-hidden],
-.spui-PaginationItem-link--first[aria-hidden],
-.spui-PaginationItem-link--last[aria-hidden] {
+.spui-PaginationItem-link--prev[disabled],
+.spui-PaginationItem-link--next[disabled],
+.spui-PaginationItem-link--first[disabled],
+.spui-PaginationItem-link--last[disabled],
+.spui-PaginationItem-link--prev:disabled,
+.spui-PaginationItem-link--next:disabled,
+.spui-PaginationItem-link--first:disabled,
+.spui-PaginationItem-link--last:disabled {
   opacity: 0.3;
 }
 
-.spui-PaginationItem-link[aria-hidden]:focus-visible {
+.spui-PaginationItem-link[disabled]:focus-visible,
+.spui-PaginationItem-link:disabled:focus-visible {
   outline: none;
 }
 
-.spui-PaginationItem-link:not([aria-hidden]):focus-visible {
+.spui-PaginationItem-link:not([disabled]):focus-visible,
+.spui-PaginationItem-link:not(:disabled):focus-visible {
   outline: 2px solid var(--color-focus-clarity);
   outline-offset: 1px;
 }
@@ -58,7 +64,8 @@
 }
 
 @media (hover: hover) {
-  .spui-PaginationItem-link:not([aria-hidden]):hover {
+  .spui-PaginationItem-link:not([disabled]):hover,
+  .spui-PaginationItem-link:not(:disabled):hover {
     background: var(--color-surface-tertiary);
   }
 }
